# slamEvaluation

./: .gitignore  CMakeLists.txt  evaluate.cpp  evaluation.cpp  evaluation.h  fileread.hpp  main.cpp  pairwiseICP.hpp  predeal.h  recordata.cpp  recordata.h  registration.cpp  viz.hpp
.kdev4/: slamEvaluation.kdev4
data/: imudata.txt  odom.txt  optimizedpose.txt  pose.txt  scan000.txt  scan001.txt  scan002.txt  scan003.txt  scan004.txt  scan005.txt  scan006.txt  scan007.txt  scan008.txt  scan009.txt  scan010.txt  scan011.txt  scan012.txt  scan013.txt  scan014.txt  scan015.txt  scan016.txt  scan017.txt  scan018.txt  scan019.txt  scan020.txt  scan021.txt  scan022.txt  scan023.txt  scan024.txt  scan025.txt  scan026.txt  scan027.txt  scan028.txt  scan029.txt  scan030.txt  scan031.txt  scan032.txt  scan033.txt  scan034.txt  scan035.txt  (+21 more)
flr10_indoor/: maPose.txt  optimizedpose.txt  pose.txt  rgspose.txt  scan001.txt  scan002.txt  scan003.txt  scan004.txt  scan005.txt  scan006.txt  scan007.txt  scan008.txt  最终结果.doc
